adding tab functionality

--- a/src/components/download-btn/download-button.style.scss
+++ b/src/components/download-btn/download-button.style.scss
@@ -34,6 +34,8 @@
     }
 
     &:hover {
+        color: #fff;
+        transition: all .4s ease-in-out;
         &::before {
             width: 100%;
             height: 100%;
