--- a/src/components/project-card/completed-card.style.scss
+++ b/src/components/project-card/completed-card.style.scss
@@ -19,7 +19,7 @@
                 cursor: default;
                 transform: translateY(-5px);
                 border: 1px solid #aaa6c3;
-                box-shadow: 1px 2px 15px rgba(0, 0, 0, .32);
+                box-shadow: 1px 2px 15px rgba(112, 112, 112, 0.32);
             }
 
             .abt-text {
@@ -65,6 +65,20 @@
 
         .right-about {
             grid-template-columns: 1fr;
+            padding-top: 2.5rem;
+        }
+    }
+}
+
+@media screen and (max-width:900px) {
+
+    //About Section 
+    .about-container {
+        grid-template-columns: 1fr;
+        text-align: justify;
+
+        .right-about {
+            grid-template-columns: repeat(2, 1fr);
             padding-top: 2.5rem;
         }
     }
