--- a/src/components/project-card/completed-card.style.scss
+++ b/src/components/project-card/completed-card.style.scss
@@ -68,6 +68,24 @@
             padding-top: 2.5rem;
         }
     }
+
+    .about-text {
+        white-space: -moz-pre-wrap !important;
+        /* Mozilla, since 1999 */
+        white-space: -pre-wrap;
+        /* Opera 4-6 */
+        white-space: -o-pre-wrap;
+        /* Opera 7 */
+        white-space: pre-wrap;
+        /* css-3 */
+        word-wrap: break-word;
+        /* Internet Explorer 5.5+ */
+        white-space: -webkit-pre-wrap;
+        /* Newer versions of Chrome/Safari*/
+        word-break: break-all;
+        white-space: normal;
+        padding: 10px;
+    }
 }
 
 @media (max-width:600px) {
