finally correcting layouts

--- a/src/components/download-btn/download-button.style.scss
+++ b/src/components/download-btn/download-button.style.scss
@@ -8,9 +8,9 @@
     align-self: flex-start;
     align-items: center;
     overflow: hidden;
-    margin-right: 5rem;
+width: 270px;
     margin-top: 2.5rem;
-
+    
     .btn-text {
         padding: 0 3rem;
     }
