--- a/src/components/download-btn/download-button.style.scss
+++ b/src/components/download-btn/download-button.style.scss
@@ -8,9 +8,9 @@
     align-self: flex-start;
     align-items: center;
     overflow: hidden;
-width: 270px;
+    width: 270px;
     margin-top: 2.5rem;
-    
+
     .btn-text {
         padding: 0 3rem;
     }
@@ -36,6 +36,7 @@ width: 270px;
     &:hover {
         color: #fff;
         transition: all .4s ease-in-out;
+
         &::before {
             width: 100%;
             height: 100%;
@@ -45,4 +46,6 @@ width: 270px;
         }
     }
 }
-
+.about{
+    width: 263px !important;
+}
